add search and validator

--- a/src/main/resources/templates/books/search.html
+++ b/src/main/resources/templates/books/search.html
@@ -2,29 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Search book</title>
 </head>
 <body>
 
-<a href="/books?sort_by_year=true">Сортировать книги по году выпуска</a>
-<br/>
 <form th:method="POST" th:action="@{/books/search}">
     <label for="query">Введите поисковой запрос: </label>
     <input type="text" id="query" name="query"/>
     <input type="submit" value="Искать!"/>
 </form>
-<br/>
+
 <div th:each="book : ${books}">
     <a th:href="@{/books/{id}(id=${book.getId()})}"
        th:text="${book.getTitle() + ', ' + book.getAuthor() + ', ' + book.getYear()}">book</a>
 </div>
-
 <br/>
 <hr/>
-
-<a href="/books/new">Добавить книгу</a>
-<br/>
-<a href="/people"> Список пользователей</a>
+<a href="/books"> Полный список книг</a>
 
 </body>
 </html>
